<resources>
    <string name="app_name">RoutineBoard</string>


                 # Subjects
    <!--    Put Your Subjects Name Here-->

    <string name="sub_1">   "sub 1"     </string>
    <string name="sub_2">   "sub 2"     </string>
    <string name="sub_3">   "sub 3"     </string>
    <string name="sub_4">   "sub 4"     </string>
    <string name="sub_5">   "sub 5"     </string>
    <string name="sub_6">   "sub 6"     </string>
    <string name="sub_7">   "sub 7"     </string>
    <string name="sub_8">   "sub 8"     </string>
    <string name="sub_9">   "sub 9"     </string>
    <string name="sub_10">  "sub 10"    </string>


                # Course Codes
    <!--    Put Your Course Code Here-->

    <string name="crs_1">   "course 1"  </string>
    <string name="crs_2">   "course 2"  </string>
    <string name="crs_3">   "course 3"  </string>
    <string name="crs_4">   "course 4"  </string>
    <string name="crs_5">   "course 5"  </string>
    <string name="crs_6">   "course 6"  </string>
    <string name="crs_7">   "course 7"  </string>
    <string name="crs_8">   "course 8"  </string>
    <string name="crs_9">   "course 9"  </string>
    <string name="crs_10">  "course 10" </string>

                # Batches Name
<!--     Put Your Batches Name Here-->

    <string name="all">     "ALL"       </string>
    <string name="b1">      "B1"        </string>
    <string name="b2">      "B2"        </string>
    <string name="b3">      "B3"        </string>
    <string name="b4">      "B4"        </string>
    <string name="b_1_2">   "B1,B2"     </string>
    <string name="b_3_4">   "B3,B4"     </string>
    <string name="b_1_3">   "B1,B3"     </string>
    <string name="b_2_4">   "B2,B4"     </string>
    <string name="b_1_4">   "B1,B4"     </string>
    <string name="b_2_3">   "B2,B3"     </string>



                # Teachers name
<!--    Put Your Teachers Name Here-->

    <string name="sir_1">   "sir 1"     </string>
    <string name="sir_2">   "sir 2"     </string>
    <string name="sir_3">   "sir 3"     </string>
    <string name="sir_4">   "sir 4"     </string>
    <string name="sir_5">   "sir 5"     </string>
    <string name="sir_6">   "sir 6"     </string>
    <string name="sir_7">   "sir 7"     </string>
    <string name="sir_8">   "sir 8"     </string>
    <string name="sir_9">   "sir 9"     </string>
    <string name="sir_10">  "sir 10"    </string>
    <string name="sir_11">  "sir 11"    </string>
    <string name="sir_12">  "sir 12"    </string>
    <string name="none">    " ------ "  </string>


                     # Time
<!--    Put Your Scheduled Time Here-->

    <string name="t8">      "08:00 AM"  </string>
    <string name="t9">      "09:00 AM"  </string>
    <string name="t10">     "10:00 AM"  </string>
    <string name="t11">     "11:00 AM"  </string>
    <string name="t12">     "12:00 PM"  </string>
    <string name="t1230">   "12:30 PM"  </string>
    <string name="t1">      "01:00 PM"  </string>
    <string name="t130">    "01:30 PM"  </string>
    <string name="t2">      "02:00 PM"  </string>
    <string name="t230">    "02:30 PM"  </string>
    <string name="t3">      "03:00 PM"  </string>
    <string name="t330">    "03:30 PM"  </string>








                    # Others
<!--        Put Your Others Info Here-->

    <string name="routineboard">RoutineBoard</string>

    <string name="darkwhite_icon"> <a href="https://habibrahad.github.io/resume2/">DarkWhite</a></string>

    <string name="about_me">        <a href="https://habibrahad.github.io">About Myself</a> </string>

    <string name= "sourcecode">     <a href="https://github.com/habibrahad/RoutineBoard">Source Code</a>   </string>

    <string name="facebook">        <a href="https://www.facebook.com/habib.reza.karim">Habib Rahad</a></string>

    <string name= "faq">            <a href="mailto:habib.reza.karim@gmail.com">FAQ</a>    </string>

    <string name="darkwhite">DarkWhite</string>

    <string name="information">Information</string>

    <string name="version">Version 0.0.7</string>

</resources>
